[tool.poetry]
name="trip-panner-yt"
version = "0.1.0"
description = "AI Trip Planner"
authors = ["Pratul"]



[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
crewai = "^0.102.0"
unstructured = '==0.10.25'
pyowm = '3.3.0'

python-dotenv = "1.0.0"
langchain = "^0.3.18"
langchain-openai = "^0.3.5"
tiktoken = "^0.9.0"

[tool-pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.nd
uselibraryCodeForTypes = true
exclude = [" .cache"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core-masonry-api"